Change History
==============

3.3 - UNRELEASED
----------------

- Reinstall scripts on update which appears to be good recipe practice.
  [stefan]

3.2 (2009-04-02)
----------------

- Add a new zcml-additional option. This is useful for environments where
  non-code configuration (such as database connection details for
  ore.contentmirror) are managed through zcml.
  [wichert]

3.1 (2009-03-15)
----------------

- The 2.9 fix for spaces caused a problem using debug (bug 337740)
  due to the way do_debug passed the "-i" command line argument
  to get_startup_cmd.
  [smcmahon]  

3.0 (2009-02-27)
----------------

- The 2.9 fix for the instance run command was itself broken and
  would fail on anything except Windows.
  [smcmahon]

- Changed the `zope2-egg` option to omit any kind of instance creation for
  now. The mkzopeinstance script relies on being able to import Zope2, which
  is not available when buildout runs.
  [hannosch]

2.9 (2009-02-26)
----------------

- The instance run command was vulnerable to spaces in pathnames, and
  needed some extra quoting for win32.
  [smcmahon]

- Check for existence of windows scripts before patching them. Some
  Linux distributions of Zope2 don't have these files. 
  [smcmahon]

- Delegate commands to ``win32serviceutil.HandleCommand()`` on win32,
  instead of starting the interpreter through ``os.system()``. Should
  shave off a couple seconds from overall time taken to process those
  commands.
  [sidnei]

- Compute ``serviceClassString`` ourselves, since we are calling this
  as a module and not directly as ``__main__``, otherwise the service
  won't be installed correctly.
  [sidnei]

2.8 (2008-12-05)
----------------

- Add more tests for ZEO client with blob and demo storages.
  Still no test on 'shared-blob-dir' option.
  [encolpe]

- Always use 'r'-style strings for passing script and configuration
  filenames (eg: on 'instance run <script>').
  [sidnei]

- Add a demo-storage option and tests.
  [encolpe]
